<resources>
    <string name="app_name">National Parks</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_settings_fragment_label">Settings</string>
    <string name="pref_data_fragment_label">Data Settings</string>
    <string name="pref_data_title">Data</string>
    <string name="pref_synchronizeServer_title">Donwload Parks data</string>
    <string name="pref_synchronizeServer_summary">Download parks data to access them offline.</string>
    <string name="pref_synchronizeServer_when_online">You are currently offline, download will start once you are online again.</string>
    <string name="pref_addDelayToDebug_title">Delay download work</string>
    <string name="pref_addDelayToDebug_summary">Add delay to download request. Debug purpose only.</string>
    <string name="pref_refreshStrategy_title">Refresh data</string>
    <string name="pref_refresh_strategy_always">Always</string>
    <string name="pref_refresh_strategy_1_second">Every second</string>
    <string name="pref_refresh_strategy_1_minute">Every minute</string>
    <string name="pref_refresh_strategy_5_minutes">Every 5 minutes</string>
    <string name="pref_refresh_strategy_day">Every day</string>
    <string name="pref_refresh_strategy_never">Never</string>

    <!-- Home page -->
    <string name="home_title">National Park Service</string>
    <string name="home_parks_title">National Parks</string>
    <string name="home_parks_subtitle">Discover America\'s Story: The National Parks</string>
    <string name="home_parks_button">Explore</string>
    <string name="home_events_title">Events</string>
    <string name="home_events_subtitle">Plan your visit</string>
    <string name="home_events_button">List events</string>

    <!-- Parks List -->
    <string name="parkList_title">Parks</string>
    <string name="parkList_item_activities">Activities available: %1$s</string>
    <string name="parkList_item_noactivities">No activities available</string>

    <!-- Park Detail -->
    <string name="parkDetail_description_title">Description</string>
    <string name="parkDetail_parkactivities_title">Activities</string>
    <string name="parkDetail_weather_title">Weather</string>

    <!-- Events List -->
    <string name="eventList_title">Events by state</string>
    <string name="eventList_noFee">No info available.</string>

    <!-- Notifications -->
    <string name="notification_channel_id">channelId</string>
    <string name="notification_title">Downloading parks data</string>
    <string name="channel_name">Download</string>
    <string name="channel_description">This notification informs you that data are currently being downloaded</string>
    <string name="notif_downloading">%1$d %%</string>
    <string name="notif_download_complete">Complete</string>

    <!-- Errors-->
    <string name="error_generic_label">An error occurred.</string>
    <string name="list_error_images_label">An error occurred while retrieving images.</string>
    <string name="list_error_activities_label">An error occurred while retrieving activities.</string>

    <!-- List, general -->
    <string name="list_noResults">No results found.</string>
</resources>