<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="data_category"
        app:title="@string/pref_data_title">

        <Preference
            app:icon="@drawable/download_for_offline"
            app:key="synchronizeServer"
            app:summary="@string/pref_synchronizeServer_summary"
            app:title="@string/pref_synchronizeServer_title" />

        <SwitchPreferenceCompat
            app:icon="@drawable/pending_actions"
            app:key="addDelayToDebug"
            app:summary="@string/pref_addDelayToDebug_summary"
            app:title="@string/pref_addDelayToDebug_title" />

        <ListPreference
            app:defaultValue="NEVER"
            app:entries="@array/preferences_refresh_strategy_entries"
            app:entryValues="@array/preferences_refresh_strategy_values"
            app:icon="@drawable/history"
            app:key="refreshStrategy"
            app:title="@string/pref_refreshStrategy_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


</PreferenceScreen>