<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        tools:context=".ui.home.HomeFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/parksCardView"
            style="@style/NpsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/parkImageView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/moutain"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/parksTitleTextView"
                    style="@style/CardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/home_parks_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parkImageView"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/parksSubtitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/home_parks_subtitle"
                    android:textSize="@dimen/font_size_title"
                    app:layout_constraintStart_toStartOf="@+id/parksTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/parksTitleTextView"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Button
                    android:id="@+id/seeParksButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/home_parks_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/parksTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/parksSubtitleTextView"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/downloadProgressIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/parksTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/parksSubtitleTextView"
                    app:layout_constraintVertical_chainStyle="packed" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/NpsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parksCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/eventsImageView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/girl_for_events"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/eventsTitleTextView"
                    style="@style/CardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/home_events_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventsImageView"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/eventsSubtitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/home_events_subtitle"
                    android:textSize="@dimen/font_size_title"
                    app:layout_constraintStart_toStartOf="@+id/eventsTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/eventsTitleTextView"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Button
                    android:id="@+id/seeEventsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/home_events_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/eventsSubtitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/eventsSubtitleTextView"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>